feat: enhance seat selection and purchase flow; add BoletoGeneradoDTO for ticket details and update related DAOs